--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=st7567s LC display library 128 x 64 pixel monochrome
-version=0.3.10
+name=st7567sfGK
+version=0.3.11
 author=Holger Lembke
 maintainer=Holger Lembke <lembke@gmail.com>
 sentence=st7567s i2c LC display library 128 x 64 pixel monochrome
