--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=st7567sfGK
-version=0.3.13
+name=st7567sfGK 128x64 i2c LCD driver for Generation Klick
+version=0.3.14
 author=Holger Lembke
 maintainer=Holger Lembke <lembke@gmail.com>
 sentence=st7567s i2c LC display library 128 x 64 pixel monochrome
-paragraph=
+paragraph=works with 128 x 64 LCD in b/w, is simple and uses little memory, 3.3 volts for ESP32 and ESP8266, works fair with a NON-Zener-Diode-modified boards
 category=Display
 url=https://github.com/holgerlembke/st7567sfGK
 architectures=*
